fix(PhotoDetails): update title alignment and change title element to div for better styling

--- a/src/styles/photoDetails.css
+++ b/src/styles/photoDetails.css
@@ -6,11 +6,12 @@
 .title-and-photo {
     display: flex;
     flex-direction: row;
-    align-items: start;
+    align-items: end;
 }
 
 .photo-title {
     font-family: "Orbitron", system-ui;
+    font-size: 2rem;
     writing-mode: vertical-lr;
     transform: rotate(180deg);
     color: rgba(0, 0, 0, 0.295);
